objects/AWS_Credentials__c.object
<CustomObject>
    <description>To store Amazon Web Servces API and Secret keys.</description>
    <fields>
        <fullName>Access_Key__c</fullName>
        <label>Access Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point_URL__c</fullName>
        <description>AWS SES End point URL</description>
        <label>End Point URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BLN AWS Credentials</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AES Credentials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN AWS Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>